Fix squashed avatar images

--- a/css/forum.css
+++ b/css/forum.css
@@ -29,6 +29,7 @@
   width: 25px;
   height: 25px;
   vertical-align: middle;
+  object-fit: cover;
 }
 
 .header {
